# dithery-do

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  README.md
src/: Color.h  Image.cpp  Image.h  Palette.cpp  Palette.h  main.cpp
src/color/: IColorSpace.h  LabColorSpace.cpp  LabColorSpace.h  XyzColorSpace.cpp  XyzColorSpace.h
src/pipeline/: LabConversion.cpp  LabConversion.h  PipelineStep.cpp  PipelineStep.h  XyzConversion.cpp  XyzConversion.h
src/select/: BrightnessPartition.cpp  BrightnessPartition.h  ClosestEuclidian.cpp  ClosestEuclidian.h  ClosestLine.cpp  ClosestLine.h  ClosestMix.cpp  ClosestMix.h  ClosestPartition.cpp  ClosestPartition.h  IColorSelector.h  PartitionBlend.cpp  PartitionBlend.h  SelectNearest.cpp  SelectNearest.h
src/vulkan/: Vulkan.cpp  Vulkan.h  util.cpp  util.h  vulkan_ext.cpp  vulkan_ext.h  vulkan_wrapper.cpp  vulkan_wrapper.h
src/vulkan/util/: Instance.cpp  Instance.h  MemoryPool.cpp  MemoryPool.h  StagingBuffer.cpp  StagingBuffer.h
